fix text visibility issue on password requirement

--- a/client/src/components/createPassword/createPassword.scss
+++ b/client/src/components/createPassword/createPassword.scss
@@ -44,14 +44,16 @@
     padding: 5px;
     border-radius: 10px;
     .password-requirement-header {
-      font-weight: 500;
-      font-size: $smallFontSize;
-      color: $lightGreyPrimary;
+      font-weight: 900;
+      font-size: $titleFontSize;
+      color: $primaryColor;
+      padding: 10px;
     }
     .password-requirement {
-      font-weight: 400;
-      color: $lightGreyPrimary;
-      font-size: 10px;
+      font-weight: 600;
+      color: $primaryColor;
+      font-size: $largerFontSize;
+      padding: 10px;
     }
   }
 }
